update repo setup

--- a/config/site.yaml
+++ b/config/site.yaml
@@ -1,7 +1,9 @@
-title: Grav
-author:
-  name: Joe Bloggs
-  email: 'joe@example.com'
-metadata:
-    description: 'Grav is an easy to use, yet powerful, open source flat-file CMS'
+title: Alyvix
+default_lang: en
 
+author:
+  name: Alyvix Team
+  email: 'info@alyvix.com'
+
+metadata:
+    description: 'Alyvix: eyes and hands like a human, with a stopwatch.'
