--- a/config/themes/quark.yaml
+++ b/config/themes/quark.yaml
@@ -10,7 +10,7 @@ blog-page: '/blog'
 spectre:
   exp: false
   icons: false
-custom_logo:
-    - name: 'alyvix_logo.svg'
-custom_logo_mobile:
-    - name: 'alyvix_logo.svg'
+# custom_logo:
+#     - name: 'alyvix_logo.svg'
+# custom_logo_mobile:
+#     - name: 'alyvix_logo.svg'
