--- a/plugins/simple-cookie/simple-cookie.yaml
+++ b/plugins/simple-cookie/simple-cookie.yaml
@@ -2,4 +2,4 @@ enabled: true
 custom: false
 position: bottom-right
 palette: gray
-informations: https://www.iubenda.com/privacy-policy/76746718
+informations: 'https://www.iubenda.com/privacy-policy/76746718'
