migrate old urls

--- a/config/site.yaml
+++ b/config/site.yaml
@@ -7,3 +7,74 @@ author:
 
 metadata:
     description: 'Alyvix: eyes and hands like a human, with a stopwatch.'
+
+redirects:
+    '/alyvix' : '/'
+    '/core' : '/'
+    '/privacy' : '/'
+    '/alyvix-3-is-coming-and-it-will-be-disruptive' : '/'
+    '/alyvix-engine' : '/'
+    '/alyvix-technological-change' : '/'
+    '/app-availability-responsiveness' : '/'
+    '/application-performance-management' : '/'
+    '/artificial-intelligence-in-performance-monitoring' : '/'
+    '/can-i-use-alyvix-as-a-benchmark': '/'
+    '/customer-experience-management' : '/'
+    '/monitoring-end-user' : '/'
+    '/end-user-monitoring-why' : '/'
+    '/graphic-detection-interaction' : '/'
+    '/online-customer-experience' : '/'
+    '/open-source' : '/'
+    '/performance-measurement-outputs' : '/'
+    '/pervasive-monitoring' : '/'
+    '/real-user-monitoring-vs-synthetic-monitoring' : '/'
+    '/reporting-system': '/'
+    '/services-2': '/'
+    '/synthetic-monitoring': '/'
+    '/synthetic-monitoring-your-not-knowing-the-problem-doesnt-mean-there-isnt-one': '/'
+    '/tag/application-performance-management': '/'
+    '/test-case-building': '/'
+    '/the-new-alyvix': '/'
+    '/unified-monitoring-powered-by-ai': '/'
+    '/visual-synthetic-monitoring' : '/'
+    '/visual-monitoring' : '/'
+    '/visual-synthetic-monitoring-2' : '/'
+    '/-2' : '/'
+    '/linux' : '/'
+    '/why-is-visual-synthetic-monitoring-important-and-how-does-it-work' : '/'
+    '/why-python' : '/'
+    '/why-synthetic-monitoring-system' : '/'
+    '/doc' : '/learn'
+    '/getstarted' : '/learn'
+    '/glossary' : '/learn'
+    '/2-4-1-release-notes' : '/learn'
+    '/release-2-7' : '/learn'
+    '/pricing' : '/service'
+    '/training' : '/service'
+    '/success-stories' : '/service'
+    '/blog': '/service'
+    '/cloud' : '/service'
+    '/solution' : '/service'
+    '/training-synthetic-application-monitoring-with-alyvix' : '/service'
+    '/a-training-with-realstuff' : '/service'
+    '/alyvix-groundwork-integration' : '/service'
+    '/alyvix-synthetic-monitoring-training' : '/service'
+    '/hospital-scenario-distributed-monitoring-environment' : '/service'
+    '/ibb' : '/service'
+    '/it-service-status-aggregation-for-distributed-monitoring-scenarios' : '/service'
+    '/nerdio-adar-inc' : '/service'
+    '/sudtiroler-gemeindenverband' : '/service'
+    '/system-integration' : '/service'
+    '/test-cases-on-microsoft-dynamics-ax': '/service'
+    '/about-us' : '/team'
+    '/support' : '/team'
+    '/events' : '/team'
+    '/osmc2018notes' : '/team'
+    '/hackthealps' : '/team'
+    '/agile-digital-governance-ready-for-the-digital-transformation' : '/team'
+    '/cloud-transformation-moving-to-agile' : '/team'
+    '/events__trashed' : '/team'
+    '/icinga-camp-2019-berlin' : '/team'
+    '/making-part-great-community' : '/team'
+    '/neteye-erizone-user-group' : '/team'
+    '/osmc-2018-nuremberg' : '/team'
