--- a/config/plugins/simple-cookie.yaml
+++ b/config/plugins/simple-cookie.yaml
@@ -1,5 +1,7 @@
 enabled: true
 custom: false
 position: bottom-right
+layout: edgeless
 compliance: info
 palette: gray
+informations: 'https://www.iubenda.com/privacy-policy/76746718'
