build blog section and update site settings

--- a/config/site.yaml
+++ b/config/site.yaml
@@ -52,8 +52,6 @@ redirects:
     '/release-2-7' : '/learn'
     '/pricing' : '/service'
     '/training' : '/service'
-    '/success-stories' : '/service'
-    '/blog': '/service'
     '/cloud' : '/service'
     '/solution' : '/service'
     '/training-synthetic-application-monitoring-with-alyvix' : '/service'
@@ -61,10 +59,7 @@ redirects:
     '/alyvix-groundwork-integration' : '/service'
     '/alyvix-synthetic-monitoring-training' : '/service'
     '/hospital-scenario-distributed-monitoring-environment' : '/service'
-    '/ibb' : '/service'
     '/it-service-status-aggregation-for-distributed-monitoring-scenarios' : '/service'
-    '/nerdio-adar-inc' : '/service'
-    '/sudtiroler-gemeindenverband' : '/service'
     '/system-integration' : '/service'
     '/test-cases-on-microsoft-dynamics-ax': '/service'
     '/about-us' : '/team'
@@ -79,3 +74,7 @@ redirects:
     '/making-part-great-community' : '/team'
     '/neteye-erizone-user-group' : '/team'
     '/osmc-2018-nuremberg' : '/team'
+    '/success-stories': '/blog'
+    '/ibb': '/blog'
+    '/nerdio-adar-inc': '/blog'
+    '/sudtiroler-gemeindenverband': '/blog'
